# gnn-tutorial

./: .gitignore  HOW_TO_STUDY.md  NOTEBOOK_POLICY.md  PRODUCT_BUILDER_GUIDE.md  README.md  pyproject.toml
chapters/: CHAPTER_TEMPLATE.md
chapters/00-why-graph-learning/: README.md  chapter.py  exercise.py  solution.py
chapters/01-graph-basics/: README.md  chapter.py  exercise.py  solution.py
chapters/02-message-passing-by-hand/: README.md  chapter.py  exercise.py  solution.py
chapters/03-random-walk/: README.md  chapter.py  exercise.py  solution.py
chapters/04-deepwalk/: README.md  chapter.py  exercise.py  solution.py
chapters/05-node2vec/: README.md  chapter.py  exercise.py  solution.py
chapters/06-gcn/: README.md  chapter.py  exercise.py  solution.py
chapters/07-graphsage/: README.md  chapter.py  exercise.py  solution.py
chapters/08-gat/: README.md  chapter.py  exercise.py  solution.py
chapters/09-link-prediction/: README.md  chapter.py  exercise.py  (+1 more)
data/: README.md
notebooks/: 00-why-graph-learning.ipynb  01-graph-basics.ipynb  02-message-passing-by-hand.ipynb  03-random-walk.ipynb  04-deepwalk.ipynb  05-node2vec.ipynb  06-gcn.ipynb  07-graphsage.ipynb  08-gat.ipynb  09-link-prediction.ipynb  10-graph-classification.ipynb
tests/: __init__.py  chapter_test_utils.py  test_curriculum_navigation.py  test_datasets.py  test_embedding_chapters.py  test_foundation_chapters.py  test_gnn_chapters.py  test_gnn_layers.py  test_graph_utils.py  test_negative_sampling.py  test_product_task_chapters.py  test_walks.py
tools/: sync_tutorial_assets.py
(+14 files in other folders)
